--- a/blog.html
+++ b/blog.html
@@ -5,16 +5,16 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.9ApqRM_t.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ahW6GnIi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DMTfuW-r.js">
+		<link href="./_app/immutable/assets/0.BeR6GF8d.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CaqblKu-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DtnIwx16.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BFffGjdO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B6SBoC_g.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D39L6dK9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CR5ZI-Vn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BoVGCHAO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.D8ZonF_Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.BplKyf-t.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.DZN5Z8xa.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DZqdYkJf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.D4djld-W.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.tfxxOVEQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Navlink.BTaL0hDo.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- PRELOAD -->
         <link rel="preload" href="./font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
@@ -25,11 +25,11 @@
         <link rel="stylesheet" href="./css/main.css">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900">
-		<div style="display: contents">    <header class="absolute top-0 w-full md:w-[7rem] md:h-full md:fixed md:top-0 md:left-0 bg-slate-900/50 px-4 py-2 lg:px-[3rem] z-20 transition-all duration-300"><div class="flex items-center justify-end"><a href="/" draggable="false" class="logo group md:-rotate-90 text-indigo-500 dark:text-indigo-200 outline-none md:absolute md:translate-y-[-50%] md:translate-x-[-50%] md:top-[50%] md:left-[50%] svelte-x8dn08"><h1 class="logo-text uppercase text-right font-zenless-logo tracking-wider whitespace-nowrap italic px-4 transition-all duration-300 svelte-x8dn08" data-svelte-h="svelte-6kc7vu">lnfel&#39;s Room</h1> </a> <button type="button" class="md:hidden text-tulip-tree-400 outline-none hover:bg-tulip-tree-400 focus:bg-tulip-tree-400 hover:text-slate-900 focus:text-slate-900 transition-colors p-2" data-svelte-h="svelte-rrtu97"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu"><line x1="4" x2="20" y1="12" y2="12"></line><line x1="4" x2="20" y1="6" y2="6"></line><line x1="4" x2="20" y1="18" y2="18"></line></svg></button></div> </header> <main class="h-screen md:static md:flex md:items-stretch md:h-full overflow-hidden will-change-scroll"><div class="w-screen shrink-0 flex items-center"><div class="md:w-[7rem]"></div> <nav class="menu w-full self-stretch"><div class="h-full hidden md:flex flex-col gap-2 p-20"><a href="/" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Home</a><a href="/#about" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">About</a><a href="/#projects" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Projects</a><a href="/#contact" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Contact</a><a href="/blog" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Blog</a></div></nav></div> <section id="blog" class="w-screen h-full shrink-0 flex" data-svelte-h="svelte-cnam5u"></section></main>  
+		<div style="display: contents">    <header class="absolute top-0 w-full md:w-[7rem] md:h-full md:fixed md:top-0 md:left-0 bg-slate-900/50 px-4 py-2 lg:px-[3rem] z-20 transition-all duration-300"><div class="flex items-center justify-end"><a href="./" draggable="false" class="logo group md:-rotate-90 text-indigo-500 dark:text-indigo-200 outline-none md:absolute md:translate-y-[-50%] md:translate-x-[-50%] md:top-[50%] md:left-[50%] svelte-x8dn08"><h1 class="logo-text uppercase text-right font-zenless-logo tracking-wider whitespace-nowrap italic px-4 transition-all duration-300 svelte-x8dn08" data-svelte-h="svelte-6kc7vu">lnfel&#39;s Room</h1> </a> <button type="button" class="md:hidden text-tulip-tree-400 outline-none hover:bg-tulip-tree-400 focus:bg-tulip-tree-400 hover:text-slate-900 focus:text-slate-900 transition-colors p-2" data-svelte-h="svelte-rrtu97"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu"><line x1="4" x2="20" y1="12" y2="12"></line><line x1="4" x2="20" y1="6" y2="6"></line><line x1="4" x2="20" y1="18" y2="18"></line></svg></button></div> </header> <main class="h-screen md:static md:flex md:items-stretch md:h-full overflow-hidden will-change-scroll"><div class="fixed inset-0 md:static md:block w-screen shrink-0 flex items-center z-10"><nav class="menu w-full h-full hidden md:block self-stretch pt-20 md:pt-0"><div class="h-full flex flex-col gap-2 px-4 py-6 md:p-20 md:pl-[12rem]"><a href="./" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Home</a><a href="./#about" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">About</a><a href="./#projects" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Projects</a><a href="./#contact" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Contact</a><a href="./blog" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Blog</a></div></nav></div> <section id="blog" class="w-screen h-screen shrink-0 flex px-4 py-6 pt-[9rem] md:p-20" data-svelte-h="svelte-1a89hhk"></section></main>  
 			
 			<script>
 				{
-					__sveltekit_1idye1q = {
+					__sveltekit_1ugrotv = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -38,8 +38,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ahW6GnIi.js"),
-						import("./_app/immutable/entry/app.D39L6dK9.js")
+						import("./_app/immutable/entry/start.CaqblKu-.js"),
+						import("./_app/immutable/entry/app.CR5ZI-Vn.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
