--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 		
 		<link href="./_app/immutable/assets/0.BeR6GF8d.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DQnxG7h9.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CaqblKu-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DtnIwx16.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BSy4cr8_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CG7elqfV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BFffGjdO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B6SBoC_g.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CR5ZI-Vn.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BOHB24f_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BoVGCHAO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DZqdYkJf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.D4djld-W.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BoxwKMYQ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Czt4ukOB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BKkOtWJH.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DDtHcyKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Navlink.BTaL0hDo.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- PRELOAD -->
         <link rel="preload" href="./font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ugrotv = {
+					__sveltekit_1mb9pw4 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CaqblKu-.js"),
-						import("./_app/immutable/entry/app.CR5ZI-Vn.js")
+						import("./_app/immutable/entry/start.BSy4cr8_.js"),
+						import("./_app/immutable/entry/app.BOHB24f_.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
