--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="%sveltekit.assets%/css/font.css">
         <link rel="stylesheet" href="%sveltekit.assets%/css/main.css">
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900">
+	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
