--- a/blog.html
+++ b/blog.html
@@ -10,18 +10,18 @@
 		
 		<link href="./_app/immutable/assets/0.1dZG7qSo.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.t9AhSFK4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DLTwoNvA.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.px5UeqTP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BRcbJF4v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DkNbgyf2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CLEszH45.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CSg6gou0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.v0C3h-Pp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B04iSV_w.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.I02zONuW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BH09UnIP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Sl3B9I-3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DikIa1kr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CVUmQT27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.BIgo118v.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.oRKXdbrV.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.C5INvLWV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.WaVxLAar.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- PRELOAD -->
         <link rel="preload" href="./font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" as="style" href="./css/font.css">
@@ -35,7 +35,7 @@
 			
 			<script>
 				{
-					__sveltekit_xxl0d9 = {
+					__sveltekit_k377bn = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -44,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.t9AhSFK4.js"),
-						import("./_app/immutable/entry/app.CSg6gou0.js")
+						import("./_app/immutable/entry/start.px5UeqTP.js"),
+						import("./_app/immutable/entry/app.v0C3h-Pp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
