--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
         <link rel="manifest" href="/site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.px5UeqTP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BRcbJF4v.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CaOeSPpw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Cn0sLYe6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DkNbgyf2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CLEszH45.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.v0C3h-Pp.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.QFvkkjVh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B04iSV_w.js">
         <!-- PRELOAD -->
@@ -27,15 +27,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_k377bn = {
+					__sveltekit_nosrx9 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.px5UeqTP.js"),
-						import("/_app/immutable/entry/app.v0C3h-Pp.js")
+						import("/_app/immutable/entry/start.CaOeSPpw.js"),
+						import("/_app/immutable/entry/app.QFvkkjVh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
