--- a/blog.html
+++ b/blog.html
@@ -8,20 +8,20 @@
         <link rel="manifest" href="./site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.1dZG7qSo.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.CrbZrXlZ.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.px5UeqTP.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BRcbJF4v.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CaOeSPpw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cn0sLYe6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DkNbgyf2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CLEszH45.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.v0C3h-Pp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.QFvkkjVh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B04iSV_w.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Sl3B9I-3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DikIa1kr.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CW9zkpjH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D7P5zqXe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CVUmQT27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.C5INvLWV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.WaVxLAar.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.CXjBqNLv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.DoVEyDpO.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- PRELOAD -->
         <link rel="preload" href="./font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" as="style" href="./css/font.css">
@@ -31,11 +31,11 @@
         <link rel="stylesheet" href="./css/main.css">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
-		<div style="display: contents">   <header class="fixed top-0 left-0 w-full md:w-[7rem] md:h-full bg-slate-900/50 px-4 py-2 lg:px-[3rem] z-30 transition-all duration-300"><div class="flex items-center justify-between"><a href="./" draggable="false" class="logo group md:-rotate-90 text-indigo-500 dark:text-indigo-200 outline-none md:absolute md:translate-y-[-50%] md:translate-x-[-50%] md:top-[50%] md:left-[50%] svelte-x8dn08"><h1 class="logo-text uppercase font-zenless-logo tracking-wider whitespace-nowrap italic px-4 transition-all duration-300 svelte-x8dn08" data-svelte-h="svelte-15lcnew">lnfel&#39;s Room</h1> </a> <button type="button" class="md:hidden text-tulip-tree-400 outline-none hover:bg-tulip-tree-400 focus:bg-tulip-tree-400 hover:text-slate-900 focus:text-slate-900 transition-colors p-2" data-svelte-h="svelte-rrtu97"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu"><line x1="4" x2="20" y1="12" y2="12"></line><line x1="4" x2="20" y1="6" y2="6"></line><line x1="4" x2="20" y1="18" y2="18"></line></svg></button></div> </header>  <main data-scrolled-amount="0" data-percentage="0" class="relative w-[max-content] h-screen md:static md:flex md:items-stretch md:h-full will-change-scroll"><div class="stellar-container fixed inset-0 md:relative w-screen h-screen overflow-hidden shrink-0 z-20 svelte-x2r4ko"><div class="stellar-bg h-full relative svelte-x2r4ko" data-svelte-h="svelte-1dg1urr"><div class="stellar-colored svelte-x2r4ko"></div> <img src="/img/ui/stellar-bg/grayscale.webp" alt="" class="stellar-grayscale hidden md:block svelte-x2r4ko"></div> <div class="menu-container absolute inset-0 z-30 svelte-x2r4ko"><nav class="menu w-full h-full flex flex-col justify-between md:p-20 svelte-x2r4ko"><div class="menu-links-container flex flex-col gap-2 px-4 py-6 pt-36 md:pt-0 md:pl-[5rem]"><a href="./" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Home</a><a href="./#about" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">About</a><a href="./#projects" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Projects</a><a href="./#contact" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Contact</a><a href="./blog" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Blog</a></div> <div class="flex items-center gap-2 px-8 py-6 md:pl-[6.5rem]" data-svelte-h="svelte-1m5z91b"><div class="w-10 h-10"><img src="/img/ui/svelte-logo.svg" alt="" width="100" height="100" class="object-contain aspect-square"></div> <span class="font-zenless-copy">Proudly made with <a href="https://kit.svelte.dev/" target="_blank" class="text-[#ff3e00] outline-none hover:underline focus:underline">SvelteKit</a></span></div></nav></div> </div> <section id="blog" class="w-screen h-screen shrink-0 flex px-4 py-6 pt-[9rem] md:p-20" data-svelte-h="svelte-1a89hhk"></section></main>  
+		<div style="display: contents">   <header class="fixed top-0 left-0 w-full md:w-[7rem] md:h-full bg-slate-900/50 px-4 py-2 lg:px-[3rem] z-30 transition-all duration-300"><div class="flex items-center justify-between"><a href="./" draggable="false" class="logo group md:-rotate-90 text-indigo-500 dark:text-indigo-200 outline-none md:absolute md:translate-y-[-50%] md:translate-x-[-50%] md:top-[50%] md:left-[50%] svelte-x8dn08"><h1 class="logo-text uppercase font-zenless-logo tracking-wider whitespace-nowrap italic px-4 transition-all duration-300 svelte-x8dn08" data-svelte-h="svelte-15lcnew">lnfel&#39;s Room</h1> </a> <button type="button" class="md:hidden text-tulip-tree-400 outline-none hover:bg-tulip-tree-400 focus:bg-tulip-tree-400 hover:text-slate-900 focus:text-slate-900 transition-colors p-2" data-svelte-h="svelte-rrtu97"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu"><line x1="4" x2="20" y1="12" y2="12"></line><line x1="4" x2="20" y1="6" y2="6"></line><line x1="4" x2="20" y1="18" y2="18"></line></svg></button></div> </header>  <main data-scrolled-amount="0" data-percentage="0" class="relative w-[max-content] h-screen md:static md:flex md:items-stretch md:h-full will-change-scroll"><div class="stellar-container fixed inset-0 md:relative w-screen h-[100dvh] overflow-hidden shrink-0 z-20 svelte-x2r4ko"><div class="stellar-bg h-full relative svelte-x2r4ko" data-svelte-h="svelte-1dg1urr"><div class="stellar-colored svelte-x2r4ko"></div> <img src="/img/ui/stellar-bg/grayscale.webp" alt="" class="stellar-grayscale hidden md:block svelte-x2r4ko"></div> <div class="menu-container absolute inset-0 z-30 svelte-x2r4ko"><nav class="menu w-full h-full flex flex-col justify-between md:p-20 svelte-x2r4ko"><div class="menu-links-container flex flex-col gap-2 px-4 py-6 pt-36 md:pt-0 md:pl-[5rem]"><a href="./" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Home</a><a href="./#about" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">About</a><a href="./#projects" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Projects</a><a href="./#contact" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Contact</a><a href="./blog" class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Blog</a></div> <div class="flex items-center gap-2 px-8 py-6 md:pl-[6.5rem]" data-svelte-h="svelte-1m5z91b"><div class="w-10 h-10"><img src="/img/ui/svelte-logo.svg" alt="" width="100" height="100" class="object-contain aspect-square"></div> <span class="font-zenless-copy">Proudly made with <a href="https://kit.svelte.dev/" target="_blank" class="text-[#ff3e00] outline-none hover:underline focus:underline">SvelteKit</a></span></div></nav></div> </div> <section id="blog" class="w-screen h-screen shrink-0 flex px-4 py-6 pt-[9rem] md:p-20" data-svelte-h="svelte-1a89hhk"></section></main>  
 			
 			<script>
 				{
-					__sveltekit_k377bn = {
+					__sveltekit_nosrx9 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -44,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.px5UeqTP.js"),
-						import("./_app/immutable/entry/app.v0C3h-Pp.js")
+						import("./_app/immutable/entry/start.CaOeSPpw.js"),
+						import("./_app/immutable/entry/app.QFvkkjVh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
