--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
         <link rel="manifest" href="/site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CaOeSPpw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Cn0sLYe6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DkNbgyf2.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CLEszH45.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.QFvkkjVh.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BEwK7fuV.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CELRzJzK.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.1GZGV_sw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CbZtkr_R.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D2TaLB8e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.B04iSV_w.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CdnkOoUs.js">
         <!-- PRELOAD -->
         <link rel="preload" href="/font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" as="style" href="/css/font.css">
@@ -27,15 +27,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_nosrx9 = {
+					__sveltekit_nahpir = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CaOeSPpw.js"),
-						import("/_app/immutable/entry/app.QFvkkjVh.js")
+						import("/_app/immutable/entry/start.BEwK7fuV.js"),
+						import("/_app/immutable/entry/app.D2TaLB8e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
