--- a/blog.html
+++ b/blog.html
@@ -8,20 +8,20 @@
         <link rel="manifest" href="./site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.CrbZrXlZ.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.DRSENgKP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CaOeSPpw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cn0sLYe6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DkNbgyf2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CLEszH45.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.QFvkkjVh.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BEwK7fuV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CELRzJzK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.1GZGV_sw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CbZtkr_R.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D2TaLB8e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.B04iSV_w.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CW9zkpjH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D7P5zqXe.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CdnkOoUs.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CUVwM2E5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bq6K3ZTd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CVUmQT27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.CXjBqNLv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.DoVEyDpO.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.CGFS0q6G.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.Dy0ItTLK.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- PRELOAD -->
         <link rel="preload" href="./font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" as="style" href="./css/font.css">
@@ -35,7 +35,7 @@
 			
 			<script>
 				{
-					__sveltekit_nosrx9 = {
+					__sveltekit_nahpir = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -44,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CaOeSPpw.js"),
-						import("./_app/immutable/entry/app.QFvkkjVh.js")
+						import("./_app/immutable/entry/start.BEwK7fuV.js"),
+						import("./_app/immutable/entry/app.D2TaLB8e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
