[Change] Preload fonts

--- a/src/app.html
+++ b/src/app.html
@@ -9,9 +9,14 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
         <!-- PRELOAD -->
-        <link rel="preload" href="%sveltekit.assets%/font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="%sveltekit.assets%/font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
+        <link rel="preload" href="%sveltekit.assets%/font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="%sveltekit.assets%/font/Zenless_2.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="%sveltekit.assets%/font/Zenless_3.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" as="style" href="%sveltekit.assets%/css/font.css">
         <link rel="preload" as="style" href="%sveltekit.assets%/css/main.css">
+        <!-- <link rel="preload" href="%sveltekit.assets%/img/ui/stellar-bg/mask-6f.webp" as="image" type="image/webp" crossorigin="anonymous">
+        <link rel="preload" href="%sveltekit.assets%/img/ui/stellar-bg/stellar-stellar.webp" as="image" type="image/webp" crossorigin="anonymous"> -->
         <!-- CSS -->
         <link rel="stylesheet" href="%sveltekit.assets%/css/font.css">
         <link rel="stylesheet" href="%sveltekit.assets%/css/main.css">
