--- a/404.html
+++ b/404.html
@@ -8,17 +8,22 @@
         <link rel="manifest" href="/site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BEwK7fuV.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CELRzJzK.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CtBGqB4K.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Bf8qiUKa.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.1GZGV_sw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CbZtkr_R.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D2TaLB8e.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B1NnANh7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CdnkOoUs.js">
         <!-- PRELOAD -->
-        <link rel="preload" href="/font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="/font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
+        <link rel="preload" href="/font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="/font/Zenless_2.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="/font/Zenless_3.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" as="style" href="/css/font.css">
         <link rel="preload" as="style" href="/css/main.css">
+        <!-- <link rel="preload" href="/img/ui/stellar-bg/mask-6f.webp" as="image" type="image/webp" crossorigin="anonymous">
+        <link rel="preload" href="/img/ui/stellar-bg/stellar-stellar.webp" as="image" type="image/webp" crossorigin="anonymous"> -->
         <!-- CSS -->
         <link rel="stylesheet" href="/css/font.css">
         <link rel="stylesheet" href="/css/main.css">
@@ -27,15 +32,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_nahpir = {
+					__sveltekit_uiuxat = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BEwK7fuV.js"),
-						import("/_app/immutable/entry/app.D2TaLB8e.js")
+						import("/_app/immutable/entry/start.CtBGqB4K.js"),
+						import("/_app/immutable/entry/app.B1NnANh7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
