--- a/blog.html
+++ b/blog.html
@@ -8,24 +8,29 @@
         <link rel="manifest" href="./site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.DRSENgKP.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.D2spBflt.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BEwK7fuV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CELRzJzK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CtBGqB4K.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bf8qiUKa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.1GZGV_sw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CbZtkr_R.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D2TaLB8e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B1NnANh7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CdnkOoUs.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CUVwM2E5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bq6K3ZTd.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DeabQ1vm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CggxVRxM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CVUmQT27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.CGFS0q6G.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.Dy0ItTLK.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.B24xkggl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.BBKbbdXa.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- PRELOAD -->
-        <link rel="preload" href="./font/Sculpin.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="./font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
+        <link rel="preload" href="./font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="./font/Zenless_2.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="./font/Zenless_3.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" as="style" href="./css/font.css">
         <link rel="preload" as="style" href="./css/main.css">
+        <!-- <link rel="preload" href="./img/ui/stellar-bg/mask-6f.webp" as="image" type="image/webp" crossorigin="anonymous">
+        <link rel="preload" href="./img/ui/stellar-bg/stellar-stellar.webp" as="image" type="image/webp" crossorigin="anonymous"> -->
         <!-- CSS -->
         <link rel="stylesheet" href="./css/font.css">
         <link rel="stylesheet" href="./css/main.css">
@@ -35,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_nahpir = {
+					__sveltekit_uiuxat = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -44,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BEwK7fuV.js"),
-						import("./_app/immutable/entry/app.D2TaLB8e.js")
+						import("./_app/immutable/entry/start.CtBGqB4K.js"),
+						import("./_app/immutable/entry/app.B1NnANh7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
