--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
         <link rel="manifest" href="/site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CtBGqB4K.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Bf8qiUKa.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Dx8sxKn3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DAUUoAmn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.1GZGV_sw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CbZtkr_R.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B1NnANh7.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CT7vumE0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CdnkOoUs.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BYAe5Qf8.js">
         <!-- PRELOAD -->
         <link rel="preload" href="/font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
         <link rel="preload" href="/font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
@@ -32,15 +32,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_uiuxat = {
+					__sveltekit_1npx7aq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CtBGqB4K.js"),
-						import("/_app/immutable/entry/app.B1NnANh7.js")
+						import("/_app/immutable/entry/start.Dx8sxKn3.js"),
+						import("/_app/immutable/entry/app.CT7vumE0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
