--- a/blog.html
+++ b/blog.html
@@ -8,20 +8,20 @@
         <link rel="manifest" href="./site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.D2spBflt.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.DVqHgjfj.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CtBGqB4K.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bf8qiUKa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Dx8sxKn3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DAUUoAmn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.1GZGV_sw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CbZtkr_R.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B1NnANh7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CT7vumE0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CdnkOoUs.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DeabQ1vm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CggxVRxM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CVUmQT27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.B24xkggl.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.BBKbbdXa.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BYAe5Qf8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BRzgzHKA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BOCRoftA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.CulK7mdr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.UJGyGi8Y.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- PRELOAD -->
         <link rel="preload" href="./font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
         <link rel="preload" href="./font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_uiuxat = {
+					__sveltekit_1npx7aq = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -49,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CtBGqB4K.js"),
-						import("./_app/immutable/entry/app.B1NnANh7.js")
+						import("./_app/immutable/entry/start.Dx8sxKn3.js"),
+						import("./_app/immutable/entry/app.CT7vumE0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
