[Feature] Lighthouse optimizations, screen reader accessibility for links and Photoswipe

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
         <link rel="manifest" href="%sveltekit.assets%/site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
+        <meta name="description" content="Creative web developer portfolio of Dale" />
 		%sveltekit.head%
         <!-- PRELOAD -->
         <link rel="preload" href="%sveltekit.assets%/font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
